--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,10 @@
 <meta http-equiv=Content-Type content="text/html"; charset="UTF-8">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
-<!--
+* {
+background-color: light-yellow;
+}
+
  /* Font Definitions */
  @font-face
 	{font-family:"Cambria Math";
@@ -52,7 +55,6 @@ span.BuborkszvegChar
 	margin:1.0cm 1.0cm 1.0cm 1.0cm;}
 div.WordSection1
 	{page:WordSection1;}
--->
 </style>
 
 </head>
