--- a/index.htm
+++ b/index.htm
@@ -1,13 +1,10 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html"; charset="UTF-8">
+<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
-* {
-background-color: light-yellow;
-}
-
+<!--
  /* Font Definitions */
  @font-face
 	{font-family:"Cambria Math";
@@ -28,7 +25,7 @@ background-color: light-yellow;
 	font-size:11.0pt;
 	font-family:"Calibri",sans-serif;}
 p.MsoAcetate, li.MsoAcetate, div.MsoAcetate
-	{mso-style-link:"BuborÃ©kszÃ¶veg Char";
+	{mso-style-link:"Buborékszöveg Char";
 	margin-top:12.0pt;
 	margin-right:0cm;
 	margin-bottom:0cm;
@@ -42,8 +39,8 @@ p.MsoNoSpacing, li.MsoNoSpacing, div.MsoNoSpacing
 	font-size:11.0pt;
 	font-family:"Calibri",sans-serif;}
 span.BuborkszvegChar
-	{mso-style-name:"BuborÃ©kszÃ¶veg Char";
-	mso-style-link:BuborÃ©kszÃ¶veg;
+	{mso-style-name:"Buborékszöveg Char";
+	mso-style-link:Buborékszöveg;
 	font-family:"Segoe UI",sans-serif;}
 .MsoChpDefault
 	{font-family:"Calibri",sans-serif;}
@@ -55,162 +52,164 @@ span.BuborkszvegChar
 	margin:1.0cm 1.0cm 1.0cm 1.0cm;}
 div.WordSection1
 	{page:WordSection1;}
+-->
 </style>
 
 </head>
 
-<body lang=HU>
+<body bgcolor="#FFFFCC" lang=HU>
 
 <div class=WordSection1>
 
-<p class=MsoNormal><b><span style='text-transform:uppercase'>Jer, Ã¶rvendezzÃ¼nk</span>
-</b>az Ãšristennek<br>
-Ã‰s Ã©nekeljÃ¼nk Å‘ szent nevÃ©nek,<br>
-ÃœdvÃ¶ssÃ©g felÅ‘l egy remÃ©nyÃ¼nknek<br>
-Mi oltalmunknak, kegyes Ã©ltetÅ‘nknek.</p>
+<p class=MsoNormal><b><span style='color:#C00000;text-transform:uppercase'>Jer,
+örvendezzünk</span> </b>az Úristennek<br>
+És énekeljünk õ szent nevének,<br>
+Üdvösség felõl egy reményünknek<br>
+Mi oltalmunknak, kegyes éltetõnknek.</p>
 
-<p class=MsoNormal>SiessÃ¼nk hozzÃ¡ dicsÃ©retekkel,<br>
-HÃ¡laadÃ¡ssal, kÃ¶nyÃ¶rgÃ©sÃ¼nkkel,<br>
-Ã‰neklÃ©sÃ¼nknek szÃ©p zengÃ©sÃ©vel,<br>
-Szent angyaloknak nagy sok seregÃ©vel.</p>
+<p class=MsoNormal>Siessünk hozzá dicséretekkel,<br>
+Hálaadással, könyörgésünkkel,<br>
+Éneklésünknek szép zengésével,<br>
+Szent angyaloknak nagy sok seregével.</p>
 
-<p class=MsoNormal>DicsÃ©ret nÃ©ked, AtyaÃºristen,<br>
-DicsÅ‘sÃ©g nÃ©ked, egy FiÃºisten,<br>
-TisztessÃ©g nÃ©ked, SzentlÃ©lek Isten,<br>
-HÃ¡rom szemÃ©lyben egy Ã¶rÃ¶k Ãšristen!</p>
+<p class=MsoNormal>Dicséret néked, Atyaúristen,<br>
+Dicsõség néked, egy Fiúisten,<br>
+Tisztesség néked, Szentlélek Isten,<br>
+Három személyben egy örök Úristen!</p>
 
-<p class=MsoNormal><b><span style='text-transform:uppercase'>Mennyei FelsÃ©gnek</span>
-</b>Ura Ã©s Istene, <br>
-Ki vagy mindeneknek gondja viselÅ‘je,<br>
-Ã‰s az embereknek kegyelmes Istene, <br>
-SzÃ­veknek ereje Ã©s megszentelÅ‘je.</p>
+<p class=MsoNormal><b><span style='color:#C00000;text-transform:uppercase'>Mennyei
+Felségnek</span><span style='color:#C00000'> </span></b>Ura és Istene, <br>
+Ki vagy mindeneknek gondja viselõje,<br>
+És az embereknek kegyelmes Istene, <br>
+Szíveknek ereje és megszentelõje.</p>
 
-<p class=MsoNormal>ReÃ¡nk is Ãšristen, vessed szemeidet,<br>
-Hogy minden dolgunkban dicsÃ©rjÃ¼nk tÃ©gedet,<br>
-Ãldjuk, magasztaljuk te szent fÃ¶lsÃ©gedet,<br>
-KiÃ©rt nyerhessÃ¼k meg az Ã¶rÃ¶k Ã©letet.</p>
+<p class=MsoNormal>Reánk is Úristen, vessed szemeidet,<br>
+Hogy minden dolgunkban dicsérjünk tégedet,<br>
+Áldjuk, magasztaljuk te szent fölségedet,<br>
+Kiért nyerhessük meg az örök életet.</p>
 
-<p class=MsoNormal>LÃ¡togass meg azÃ©rt kirÃ¡lyi szÃ©kedbÅ‘l,<br>
-Ã‰s tekints mireÃ¡nk isteni kedvedbÅ‘l,<br>
-Hogy mi kÃ¡rt ne valljunk a szÃ©p Ã¶rÃ¶ksÃ©gbÅ‘l,<br>
-Amelyet igÃ©rtÃ©l Krisztus Ã©rdemÃ©bÅ‘l.</p>
+<p class=MsoNormal>Látogass meg azért királyi székedbõl,<br>
+És tekints mireánk isteni kedvedbõl,<br>
+Hogy mi kárt ne valljunk a szép örökségbõl,<br>
+Amelyet igértél Krisztus érdemébõl.</p>
 
-<p class=MsoNormal><b><span style='text-transform:uppercase'>DicsÅ‘Ã¼lt helyeken</span>,
-</b>mennyei Paradicsomban,<br>
-Akik vigadoztok vÃ©ghetetlen boldogsÃ¡gban,<br>
-Vadtok megÃºjult Ã¡llapotban,<br>
-Az Ãšrnak nevÃ©t Ã©nekszÃ³ban,<br>
-No, dicsÃ­rjÃ©tek vigassÃ¡gban!</p>
+<p class=MsoNormal><b><span style='color:#C00000;text-transform:uppercase'>Dicsõült
+helyeken</span>, </b>mennyei Paradicsomban,<br>
+Akik vigadoztok véghetetlen boldogságban,<br>
+Vadtok megújult állapotban,<br>
+Az Úrnak nevét énekszóban,<br>
+No, dicsírjétek vigasságban!</p>
 
-<p class=MsoNormal>ÃldjÃ¡tok az Urat, kik csak Å‘nÃ©ki szolgÃ¡ltok,<br>
-Ãrtatlan ruhÃ¡ban tÃ¼ndÃ¶klÅ‘ sok kar angyalok,<br>
-Ti is, nap Ã©s hold Ã©s csillagok,<br>
-Valakik Ã©gi tÅ±zzel bÃ­rtok,<br>
-FelszÃ³val Å‘tet kiÃ¡ltsÃ¡tok!</p>
+<p class=MsoNormal>Áldjátok az Urat, kik csak õnéki szolgáltok,<br>
+Ártatlan ruhában tündöklõ sok kar angyalok,<br>
+Ti is, nap és hold és csillagok,<br>
+Valakik égi tûzzel bírtok,<br>
+Felszóval õtet kiáltsátok!</p>
 
-<p class=MsoNormal>FÃ¶ld, menny tÅ±z Ã©s vÃ­z, fejÃ©r hÃ³, kÅ‘, zÃ¡poresÅ‘,<br>
-DÃ©li s Ã©szaki szÃ©l, levegÅ‘Ã©g, kÃ¶nnyÅ± szellÅ‘,<br>
-TÃ©l, tavasz Ã©s nyÃ¡r, Å‘szi idÅ‘<br>
-(Mely nÃ©gy rÃ©szbÅ‘l Ã¡ll egy eszetendÅ‘),<br>
-TÅ‘letek az Ãšr dicsÃ­rendÅ‘.</p>
+<p class=MsoNormal>Föld, menny tûz és víz, fejér hó, kõ, záporesõ,<br>
+Déli s északi szél, levegõég, könnyû szellõ,<br>
+Tél, tavasz és nyár, õszi idõ<br>
+(Mely négy részbõl áll egy eszetendõ),<br>
+Tõletek az Úr dicsírendõ.</p>
 
-<p class=MsoNormal>DicsÃ­ret, dicsÅ‘sÃ©g, tisztessÃ©g Ã©s hÃ¡lÃ¡adÃ¡s,<br>
-A szentek UrÃ¡nak lÃ©gyen Ã¶rÃ¶k magasztalÃ¡s,<br>
-Kiben soha nincsen vÃ¡ltozÃ¡s,<br>
-Vagy igÃ­rettÅ±l meghanyatlÃ¡s,<br>
-TÅ‘le fejÃ¼nkre szÃ¡lljon Ã¡ldÃ¡s!</p>
+<p class=MsoNormal>Dicsíret, dicsõség, tisztesség és háláadás,<br>
+A szentek Urának légyen örök magasztalás,<br>
+Kiben soha nincsen változás,<br>
+Vagy igírettûl meghanyatlás,<br>
+Tõle fejünkre szálljon áldás!</p>
 
-<p class=MsoNormal><b><span style='text-transform:uppercase'>Mint a szÃ©p hÅ±vÃ¶s
-patakra</span></b> a szarvas kÃ­vÃ¡nkozik,<br>
-Lelkem Ãºgy Ã³hajt Uramhoz, Ã©s hozzÃ¡ fohÃ¡szkodik.<br>
-TehozzÃ¡d Ã©n Istenem, szomjÃºhozik Ã©n lelkem,<br>
-Vajon szÃ­ned eleibe mikor jutok, Ã©lÅ‘ Isten.</p>
+<p class=MsoNormal><b><span style='color:#C00000;text-transform:uppercase'>Mint
+a szép hûvös patakra</span></b><span style='color:#C00000'> </span>a szarvas kívánkozik,<br>
+Lelkem úgy óhajt Uramhoz, és hozzá fohászkodik.<br>
+Tehozzád én Istenem, szomjúhozik én lelkem,<br>
+Vajon színed eleibe mikor jutok, élõ Isten.</p>
 
-<p class=MsoNormal>KÃ¶nnyem hullÃ¡sa Ã©telem Ã©jjel s nappal Ã©nnekem,<br>
-Hogyha azt kÃ©rdik Ã©ntÅ‘lem: hol van a te Istened?<br>
-Akkor mÃ©lyen bÃ¡nkÃ³dom, Ã©s hÃ¡zadat Ã³hajtom,<br>
-Hol a hÃ­vek seregiben Ã¶rvendek szÃ©p Ã©neklÃ©sben.</p>
+<p class=MsoNormal>Könnyem hullása ételem éjjel s nappal énnekem,<br>
+Hogyha azt kérdik éntõlem: hol van a te Istened?<br>
+Akkor mélyen bánkódom, és házadat óhajtom,<br>
+Hol a hívek seregiben örvendek szép éneklésben.</p>
 
-<p class=MsoNormal><b><span style='text-transform:uppercase'>Itt jelen vagyon</span></b><span
-style='font-variant:small-caps'> </span>az Istennek Fia,<br>
-itt jelen vagyon felÃ¡ldozott BÃ¡rÃ¡ny,<br>
-itt jelen vagyon erÅ‘s, igaz Isten:<br>
-a JÃ©zus Krisztus.</p>
+<p class=MsoNormal><b><span style='color:#C00000;text-transform:uppercase'>Itt
+jelen vagyon</span></b><span style='font-variant:small-caps;color:#C00000'> </span>az
+Istennek Fia,<br>
+itt jelen vagyon feláldozott Bárány,<br>
+itt jelen vagyon erõs, igaz Isten:<br>
+a Jézus Krisztus.</p>
 
-<p class=MsoNormal>Itt jelen vagyon mi Ã©des TeremtÅ‘nk,<br>
-itt jelen vagyon a mi KÃ¶zbenjÃ¡rÃ³nk,<br>
-itt jelen vagyon VigasztalÃ³ tÃ¡rsunk:<br>
-a JÃ©zus Krisztus.</p>
+<p class=MsoNormal>Itt jelen vagyon mi édes Teremtõnk,<br>
+itt jelen vagyon a mi Közbenjárónk,<br>
+itt jelen vagyon Vigasztaló társunk:<br>
+a Jézus Krisztus.</p>
 
-<p class=MsoNormal>Itt jelen vagyon Ãšt, IgazsÃ¡g, Ã‰let,<br>
-itt jelen vagyon a mennyei FÃ¶lsÃ©g,<br>
-itt jelen vagyon fÃ©nyes VilÃ¡gossÃ¡g:<br>
-a JÃ©zus Krisztus.</p>
+<p class=MsoNormal>Itt jelen vagyon Út, Igazság, Élet,<br>
+itt jelen vagyon a mennyei Fölség,<br>
+itt jelen vagyon fényes Világosság:<br>
+a Jézus Krisztus.</p>
 
-<p class=MsoNormal>Itt jelen vagyon vÃ¡ltsÃ¡gunknak Napja,<br>
-itt jelen vagyon bÅ±nÃ¼nk megrontÃ³ja,<br>
-itt jelen vagyon szeretetnek lÃ¡ngja:<br>
-a JÃ©zus Krisztus.</p>
+<p class=MsoNormal>Itt jelen vagyon váltságunknak Napja,<br>
+itt jelen vagyon bûnünk megrontója,<br>
+itt jelen vagyon szeretetnek lángja:<br>
+a Jézus Krisztus.</p>
 
-<p class=MsoNormal>Itt jelen vagyon a mi VÃ­gassÃ¡gunk,<br>
-itt jelen vagyon ÅrizÅ‘nk, Oltalmunk,<br>
-itt jelen vagyon lelki bÃ¡torÃ­tÃ³nk:<br>
-a JÃ©zus Krisztus.</p>
+<p class=MsoNormal>Itt jelen vagyon a mi Vígasságunk,<br>
+itt jelen vagyon Õrizõnk, Oltalmunk,<br>
+itt jelen vagyon lelki bátorítónk:<br>
+a Jézus Krisztus.</p>
 
-<p class=MsoNormal>Adja minÃ©kÃ¼nk az Å‘ szent orszÃ¡gÃ¡t,<br>
-hogy meglÃ¡thassuk szentsÃ©ges lakÃ¡sÃ¡t,<br>
-angyali karbÃ³l tiszta szÃ©p orcÃ¡jÃ¡t,<br>
-Ã©s Å‘ szent AtyjÃ¡t. <br>
+<p class=MsoNormal>Adja minékünk az õ szent országát,<br>
+hogy megláthassuk szentséges lakását,<br>
+angyali karból tiszta szép orcáját,<br>
+és õ szent Atyját. <br>
 Amen.</p>
 
-<p class=MsoNormal><b><span style='text-transform:uppercase'>Tudom, hogy PÃ¡sztorom</span></b>
-s VezÃ©rem Ã©nnÃ©kem <br>
-&nbsp;&nbsp;Â Â Â Â Â  az Ã©n Ã©des Istenem<br>
+<p class=MsoNormal><b><span style='color:#C00000;text-transform:uppercase'>Tudom,
+hogy Pásztorom</span></b><span style='color:#C00000'> </span>s Vezérem énnékem <br>
+&nbsp;&nbsp;      az én édes Istenem<br>
 Kinek gondja vagyon testemre, lelkemre, <br>
-&nbsp;&nbsp;Â Â Â Â Â  mert Å‘ teremtett engem,<br>
-Ã‰n Å‘ juha vagyok, Ã©s hozzÃ¡ hallgatok, <br>
-&nbsp;&nbsp;Â Â Â Â Â  mert Å‘ megvÃ¡ltott engem,<br>
-AzÃ©rt benne bÃ­zom, tudom Ã©let nÃ©lkÃ¼l, <br>
-&nbsp;&nbsp;Â Â Â Â Â  hogy Ã©n nem szÅ±kÃ¶lkÃ¶dÃ¶m.</p>
+&nbsp;&nbsp;      mert õ teremtett engem,<br>
+Én õ juha vagyok, és hozzá hallgatok, <br>
+&nbsp;&nbsp;      mert õ megváltott engem,<br>
+Azért benne bízom, tudom élet nélkül, <br>
+&nbsp;&nbsp;      hogy én nem szûkölködöm.</p>
 
-<p class=MsoNormal>Az Å‘ mezejÃ©nek szÃ©p zsÃ­ros fÃ¼vÃ©vel <br>
-&nbsp;&nbsp;Â Â Â Â Â  szÃ©pen legeltet engem,<br>
-Szent Ã­gÃ©retÃ©nek Ã©des beszÃ©dÃ©vel <br>
-&nbsp;&nbsp;Â Â Â Â Â  mikor vÃ­gasztal engem,<br>
-AnyaszentegyhÃ¡zban Ã©s az Å‘ aklÃ¡ban <br>
-&nbsp;&nbsp;Â Â Â Â Â  szÃ©pen megnyugtat engem,<br>
-TolvajtÃ³l, farkastÃ³l, hamis tanÃ­tÃ³tÃ³l <br>
-&nbsp;&nbsp;Â Â Â Â Â  ott megoltalmaz engem.</p>
+<p class=MsoNormal>Az õ mezejének szép zsíros füvével <br>
+&nbsp;&nbsp;      szépen legeltet engem,<br>
+Szent ígéretének édes beszédével <br>
+&nbsp;&nbsp;      mikor vígasztal engem,<br>
+Anyaszentegyházban és az õ aklában <br>
+&nbsp;&nbsp;      szépen megnyugtat engem,<br>
+Tolvajtól, farkastól, hamis tanítótól <br>
+&nbsp;&nbsp;      ott megoltalmaz engem.</p>
 
-<p class=MsoNormal>Megvigasztal engem te pÃ¡sztori vesszÅ‘d <br>
-&nbsp;&nbsp;Â Â Â Â Â  Ã©s te pÃ¡sztori botod,<br>
-A sok nyomorÃºsÃ¡g, mellyel hÃ­veidet <br>
-&nbsp;&nbsp;Â Â Â Â Â  sÃºjtod Ã©s sanyargatod,<br>
-AzÃ©rt minden napon az Ã©n Ã©letemet <br>
-&nbsp;&nbsp;Â Â Â Â Â  mÃ¡r csak tereÃ¡d bÃ­zom,<br>
-Ã‰s tudom bizonnyal, hogy tebenned soha <br>
-&nbsp;&nbsp;Â Â Â Â Â  Ã©n meg nem fogyatkozom.</p>
+<p class=MsoNormal>Megvigasztal engem te pásztori vesszõd <br>
+&nbsp;&nbsp;      és te pásztori botod,<br>
+A sok nyomorúság, mellyel híveidet <br>
+&nbsp;&nbsp;      sújtod és sanyargatod,<br>
+Azért minden napon az én életemet <br>
+&nbsp;&nbsp;      már csak tereád bízom,<br>
+És tudom bizonnyal, hogy tebenned soha <br>
+&nbsp;&nbsp;      én meg nem fogyatkozom.</p>
 
-<p class=MsoNormal><b><span style='text-transform:uppercase'>Ãldj meg minket,
-Ãšristen</span></b>, az te jÃ³voltodbÃ³l,<br>
-VilÃ¡gosÃ­ts meg minket irgalmassÃ¡godbÃ³l<br>
-OrcÃ¡d vilÃ¡gossÃ¡gÃ¡val, Lelked ajÃ¡ndÃ©kÃ¡val,<br>
-Hogy Ã©ltÃ¼nkben ez fÃ¶ldÃ¶n jÃ¡rjunk igazsÃ¡ggal!</p>
+<p class=MsoNormal><b><span style='color:#C00000;text-transform:uppercase'>Áldj
+meg minket, Úristen</span></b>, az te jóvoltodból,<br>
+Világosíts meg minket irgalmasságodból<br>
+Orcád világosságával, Lelked ajándékával,<br>
+Hogy éltünkben ez földön járjunk igazsággal!</p>
 
-<p class=MsoNormal>Engedd meg ezt minekÃ¼nk, kegyelmes IstenÃ¼nk,<br>
-Hogy mindnyÃ¡jan tÃ©gedet igazÃ¡n esmÃ©rjÃ¼nk,<br>
-Hadd az kicsiny hitÅ±kkel egyÃ¼tt Ã¶rvendezzÃ¼nk,<br>
-Mikor megÃ­tÃ©lsz, Uram, kegyelmezz meg nekÃ¼nk!</p>
+<p class=MsoNormal>Engedd meg ezt minekünk, kegyelmes Istenünk,<br>
+Hogy mindnyájan tégedet igazán esmérjünk,<br>
+Hadd az kicsiny hitûkkel együtt örvendezzünk,<br>
+Mikor megítélsz, Uram, kegyelmezz meg nekünk!</p>
 
-<p class=MsoNormal>Ne tÃ¡ntorodjunk mi el soha, Uram, TÅ‘led,<br>
-Ne kÃ©telkedhessÃ¼nk is tÃ¶bbÃ© mÃ¡r FelÅ‘led,<br>
-NyughassÃ©k meg mi lelkÃ¼nk igaz hittel Benned,<br>
-Vallhassunk mindenekben urunknak csak TÃ©ged.</p>
+<p class=MsoNormal>Ne tántorodjunk mi el soha, Uram, Tõled,<br>
+Ne kételkedhessünk is többé már Felõled,<br>
+Nyughassék meg mi lelkünk igaz hittel Benned,<br>
+Vallhassunk mindenekben urunknak csak Téged.</p>
 
-<p class=MsoNormal>No, azÃ©rt dicsÃ©rjÃ¼k most felszÃ³val az Urat,<br>
-Mert lÃ¡m, csak Å‘ viseli mindenÃ¼tt gondunkat,<br>
-Uram, az te nevedben Ã¡ldd meg szolgÃ¡idat,<br>
-KiÃ©rt viszontag mi is dicsÃ©rjÃ¼k Fiadat.</p>
+<p class=MsoNormal>No, azért dicsérjük most felszóval az Urat,<br>
+Mert lám, csak õ viseli mindenütt gondunkat,<br>
+Uram, az te nevedben áldd meg szolgáidat,<br>
+Kiért viszontag mi is dicsérjük Fiadat.</p>
 
 </div>
 
